--- a/wedding.html
+++ b/wedding.html
@@ -142,16 +142,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="container">
 						<div class="indicate-grids">
 							<div class="col-md-3 indicate-grid">
-								<p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Newyork 9870 St Vincent</p>
+								<p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>shanxi linfen</p>
 							</div>
 							<div class="col-md-3 indicate-grid">
-								<p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>Telephone :  +1 800 603 6035</p>
+								<p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>Telephone :  150-3576-2770</p>
 							</div>
 							<div class="col-md-3 indicate-grid">
-								<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:example@mail.com"> example@mail.com</a></p>
+								<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:kuaile.yongsui@163.com">
+                  kuaile.yongsui@163.com
+                </a></p>
 							</div>
 							<div class="col-md-3 indicate-grid">
-								<p><span class="glyphicon glyphicon-send" aria-hidden="true"></span>FAX :  +1 555 999 444</p>
+								<p><span class="glyphicon glyphicon-send" aria-hidden="true"></span>weixin:296388293</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
