--- a/about.html
+++ b/about.html
@@ -182,10 +182,10 @@ Commons Attribution 3.0 Unported License URL: http://creativecommons.org/license
                 <img class="img-responsive" src="images/t1.jpg" alt="">
                 <div class="captn">
                   <h4>
-                    Tincidun
+                    Ti-amo
                   </h4>
                   <p>
-                    Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt
+                    My Love
                   </p>
                 </div>
               </a>
@@ -195,10 +195,10 @@ Commons Attribution 3.0 Unported License URL: http://creativecommons.org/license
                 <img class="img-responsive" src="images/t2.jpg" alt="">
                 <div class="captn">
                   <h4>
-                    Velit uti
+                    Confident Me
                   </h4>
                   <p>
-                    Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt
+                    I hope I always confident brave
                   </p>
                 </div>
               </a>
@@ -208,10 +208,10 @@ Commons Attribution 3.0 Unported License URL: http://creativecommons.org/license
                 <img class="img-responsive" src="images/t3.jpg" alt="">
                 <div class="captn">
                   <h4>
-                    Posuere
+                    Belle
                   </h4>
                   <p>
-                    Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt
+                   The little girl young and beautiful forever
                   </p>
                 </div>
               </a>
@@ -221,10 +221,10 @@ Commons Attribution 3.0 Unported License URL: http://creativecommons.org/license
                 <img class="img-responsive" src="images/t4.jpg" alt="">
                 <div class="captn">
                   <h4>
-                    Augc sfe
+                    Happy Family
                   </h4>
                   <p>
-                    Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt
+                    We will happy forever
                   </p>
                 </div>
               </a>
